2009-03-07  Hans Breuer  <hans@breuer.org>

	* data/display-ui.xml data/integrated-ui.xml data/popup-ui.xml
	  app/menus.c : move "Edit/Properties" to "File/Diagram Properties" as
	suggested by bug #573259, also create a Layers submenu to hold formerly
	"Edit/Layers", "Objects/Move (selection) to layer [...]"
	* app/pixmaps/objects-layer-above.png app/pixmaps/layer-add.png
	  app/pixmaps/objects-layer-below.png app/pixmaps/layers.png
	  app/pixmaps/layer-rename.png : stock icons stolen from Inkscape for 
	the new Layers menu
	* app/Makefile.am app/makefile.msc : generate inline icons
	* app/commands.[ch] : new callbacks for layer add/rename (not enabled)

	* app/preferences.c(prefs_set_value_in_widget) : don't choke on 
	val==NULL and have a matching default initialization for units, 
	both fixing bug #573625
	(prefs_get_value_from_widget) : only call the props update function if
	something has changed, get rid of spurious restart message, bug #574387

	* lib/persistence.c : updating/serializing window positions had issues,
	now hopefully fixed, bug #574388

	* app/textedit_tool.c : ensure the action sensitivity is updated after
	entering textedit mode. No tool activation by entering text, bug #572307

	* app/menus.c : unique accelerators again, bug #573257

2009-03-01  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Fixed typo (dia.exe was copied to dia-app.dll when doing
	"make full")
	* installer/win32/dia.nsi: Don't install Desktop shortcut. Patch from Niels
	Martin Hansen
	
2009-02-26  Steffen Macke <sdteffen@sdteffen.de>

	* po/POTFILES.in:
	* configure.in:
	* installer/win32/Makefile.am:
	* installer/win32/gennsh.c:
	* Makefile.am: Add gennsh.c, a dummy C program to create NSIS
	installer locale files. Bugzilla bug #572202

2009-02-25  Steffen Macke <sdteffen@sdteffen.de>

	* app/sheets_dialog_callbacks.c:
	* lib/libdia.def:
	* lib/sheet.c:
	* lib/dia_dirs.[ch]: Save relative path for icons in user created