@@ -151,6 +151,7 @@ EXPORTS
  data_get_sorted_selected
  data_get_sorted_selected_remove
  data_int
+ data_layer_get_index
  data_lower_layer
  data_next
  data_point
